<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/button_face"
    >
    <ImageButton
        android:id="@+id/vct_showFramesButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="9dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_frames"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/fullscreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/vct_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/button_face"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageButton
            android:id="@+id/vct_playButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="4dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_play"
            android:contentDescription="@string/play_stop"
            android:background="?android:selectableItemBackground"
            />

        <ImageButton
            android:id="@+id/vct_backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:background="?android:selectableItemBackground"
            />

        <ImageButton
            android:id="@+id/vct_forwardButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_forward"
            android:contentDescription="@string/next"
            android:background="?android:selectableItemBackground"
            />

        <ImageButton
            android:id="@+id/vct_markButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_add_marker"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_marker"
            />

        <ImageButton
            android:id="@+id/vct_snapshotButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_camera"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/snapshot" />

        <ImageButton
            android:id="@+id/vct_muteButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_speaker"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/mute" />

        <ImageButton
            android:id="@+id/vct_pinpButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_pinp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/pinp" />

        <ImageButton
            android:id="@+id/vct_fullscreenButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="9dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_expand"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/fullscreen" />
    </LinearLayout>

    <com.michael.video.v2.elements.AmvMarkerView
        android:id="@+id/vct_markerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/marker_view_bg"
        app:leftInert="13dp"
        app:rightInert="13dp"
        app:saveFromParent="false"
        app:layout_constraintTop_toBottomOf="@+id/vct_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/vct_playButton2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="2dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_play"
        android:contentDescription="@string/play_stop"
        android:background="@color/controller_bg"
        android:tint="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/vct_markerView"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/vct_sliderGroup"
        android:background="@color/controller_bg"
        android:layout_below="@+id/vct_markerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vct_playButton2"
        app:layout_constraintTop_toBottomOf="@+id/vct_markerView"
        >

        <com.michael.video.v2.elements.AmvSliderPanel
            android:id="@+id/vct_sliderPanel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            tools:visibility="visible" />
    </FrameLayout>


    <TextView
        android:id="@+id/vct_counterBar"
        tools:text="00:00/00:00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/controller_bg"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/vct_sliderGroup"
        />

</androidx.constraintlayout.widget.ConstraintLayout>